
  - spot::contains() still default to the complementation-based
    algorithm, however by calling
    spot::containment_select_version("forq") or by setting
    SPOT_CONTAINMENT_CHECK=forq in the environment, the
    spot::contains_forq() implementation will be used instead when
    applicable (inclusion between Büchi automata).

    The above also impacts autfilt --included-in option.

  Bugs fixed:

  - tgba_determinize()'s use_simulation option would cause it to
    segfault on automata with more than 2^16 SCCs, due to overflows in
    computations of indices in the reachability matrix for SCCs.
    (Issue #541.)  This has been fixed by disabled the use_simulation
    optimization in this case.

New in spot 2.11.6  (2023-08-01)

  Bug fixes:

  - Running command lines such as "autfilt input.hoa -o output-%L.hoa"
    where thousands of different filenames can be created failed with
    "Too many open files".  (Issue #534)

  - Using --format=... on a tool that output formulas would force
    the output on standard output, even when --output was given.

  - Using "randltl -S" did not correctly go through the SERE printer
    functions.

  - Our copy of BuDDy's bdd_forall() had a 20 year old typo that
    caused cache entries from bdd_exist() and bdd_forall() to be
    mixed.  Spot was safe from this bug because it was only using
    bdd_exist().  (Issue #535)

  - Work around recent Pandas and GCC changes.

New in spot 2.11.5  (2023-04-20)

  Bug fixes:

  - Fix spurious failure of ltlsynt2.test when Python is not installed
    (issue #530).

  - Building from the git repository would fail to report a missing
    emacs (issue #528).

  - Fix exception raised by aut1.intersecting_run(aut2).as_twa()
    because the run did not match transitions present in aut1
    verbatim.  We also changed the behavior of as_twa() to not merge
    identical states.

  - Fix segfaults occuring in determinization of 1-state terminal
    automata.
